package interfaces;

import things.Thing;

public interface BestIn {
    void setTheBestThingIn(Thing thing);
    Thing getTheBestThingIn();
}
