package interfaces;

public interface Eat {
    void isEating();
    void notEating();
}
