package interfaces;

import heroes.Hero;

public interface Talk {
    void talkAboutSomebody(Hero hero);
}
